--- a/style.css
+++ b/style.css
@@ -110,3 +110,23 @@ h1{
     text-align: center;
     margin-bottom: 1em;
 }
+
+
+
+
+
+@media (max-width:700px){
+    html{
+        font-size: 12px;
+    }
+    .outer-container{
+        margin:  1em;
+    }
+
+    .data{
+        flex-wrap: wrap;
+        gap: 1em;
+        justify-content: center;
+        align-items:center ;
+    }
+}
